ALL.yaml
---
# Source: iam/templates/apiserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iam-apiserver
  labels:
    helm.sh/chart: iam-0.1.0
    app.kubernetes.io/name: iam
    app.kubernetes.io/instance: iam
    app.kubernetes.io/version: "0.9.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: apiserver
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
    - name: https
      port: 8443
      targetPort: https
      protocol: TCP
    - name: grpc
      port: 8001
      targetPort: grpc
      protocol: TCP
  selector:
    app.kubernetes.io/name: iam
    app.kubernetes.io/instance: iam
    app.kubernetes.io/component: apiserver
---
# Source: iam/templates/authzserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iam-authzserver
  labels:
    helm.sh/chart: iam-0.1.0
    app.kubernetes.io/name: iam
    app.kubernetes.io/instance: iam
    app.kubernetes.io/version: "0.9.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: authzserver
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8010
      targetPort: http
      protocol: TCP
    - name: https
      port: 9443
      targetPort: https
      protocol: TCP
  selector:
    app.kubernetes.io/name: iam
    app.kubernetes.io/instance: iam
    app.kubernetes.io/component: authzserver
---
# Source: iam/templates/console/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iam-console
  labels:
    helm.sh/chart: iam-0.1.0
    app.kubernetes.io/name: iam
    app.kubernetes.io/instance: iam
    app.kubernetes.io/version: "0.9.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: console
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: iam
    app.kubernetes.io/instance: iam
    app.kubernetes.io/component: console
---
# Source: iam/templates/apiserver/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iam-apiserver
  labels:
    helm.sh/chart: iam-0.1.0
    app.kubernetes.io/name: iam
    app.kubernetes.io/instance: iam
    app.kubernetes.io/version: "0.9.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: apiserver
spec:
  replicas: 1
  strategy:
      type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: iam
      app.kubernetes.io/instance: iam
      app.kubernetes.io/component: apiserver
  template:
    metadata:
      labels:
        app.kubernetes.io/name: iam
        app.kubernetes.io/instance: iam
        app.kubernetes.io/component: apiserver
    spec:
      imagePullSecrets:
        - name: coding-registry
      serviceAccountName: iam-apiserver
      containers:
        - name: apiserver
          image: docker.cnb.cool/micromoving/iam/iam-apiserver:v0.9.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
            - name: https
              containerPort: 8443
              protocol: TCP
            - name: grpc
              containerPort: 8001
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 15
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 30
          securityContext:
            {}
          resources:
            limits:
              cpu: 256m
              memory: 512Mi
            requests:
              cpu: 128m
              memory: 256Mi
          volumeMounts:
            - name: log
              mountPath: /var/log/iam
            - name: config
              mountPath: /etc/iam/iam-apiserver.yaml
              subPath: iam-apiserver.yaml
            - name: iam-certs
              mountPath: /var/run/iam/certificates
              readOnly: true
      volumes:
        - name: iam-certs
          secret:
            defaultMode: 420
            secretName: iam
        - name: config
          configMap:
            name: iam-apiserver
        - name: log
          emptyDir: { }
---
# Source: iam/templates/authzserver/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iam-authzserver
  labels:
    helm.sh/chart: iam-0.1.0
    app.kubernetes.io/name: iam
    app.kubernetes.io/instance: iam
    app.kubernetes.io/version: "0.9.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: authzserver
spec:
  replicas: 1
  strategy:
      type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: iam
      app.kubernetes.io/instance: iam
      app.kubernetes.io/component: authzserver
  template:
    metadata:
      labels:
        app.kubernetes.io/name: iam
        app.kubernetes.io/instance: iam
        app.kubernetes.io/component: authzserver
    spec:
      imagePullSecrets:
        - name: coding-registry
      serviceAccountName: iam-authzserver
      containers:
        - name: apiserver
          image: docker.cnb.cool/micromoving/iam/iam-authzserver:v0.9.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8010
              protocol: TCP
            - name: https
              containerPort: 9443
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8010
            initialDelaySeconds: 15
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8010
            initialDelaySeconds: 30
          securityContext:
            {}
          resources:
            limits:
              cpu: 256m
              memory: 512Mi
            requests:
              cpu: 128m
              memory: 256Mi
          volumeMounts:
            - name: log
              mountPath: /var/log/iam
            - name: config
              mountPath: /etc/iam/iam-authzserver.yaml
              subPath: iam-authzserver.yaml
            - name: iam-certs
              mountPath: /var/run/iam/certificates
              readOnly: true
      volumes:
        - name: iam-certs
          secret:
            defaultMode: 420
            secretName: iam
        - name: config
          configMap:
            name: iam-authzserver
        - name: log
          emptyDir: {}
---
# Source: iam/templates/console/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iam-console
  labels:
    helm.sh/chart: iam-0.1.0
    app.kubernetes.io/name: iam
    app.kubernetes.io/instance: iam
    app.kubernetes.io/version: "0.9.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: console
spec:
  replicas: 1
  strategy:
      type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: iam
      app.kubernetes.io/instance: iam
      app.kubernetes.io/component: console
  template:
    metadata:
      labels:
        app.kubernetes.io/name: iam
        app.kubernetes.io/instance: iam
        app.kubernetes.io/component: console
    spec:
      imagePullSecrets:
        - name: coding-registry
      serviceAccountName: iam-console
      containers:
        - name: console
          image: docker.cnb.cool/micromoving/iam/iam-frontend:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
          resources:
            limits:
              cpu: 256m
              memory: 512Mi
            requests:
              cpu: 128m
              memory: 256Mi
          volumeMounts:
            - name: config
              subPath: nginx.conf
              mountPath: /etc/nginx/nginx.conf
            - name: cache
              mountPath: /var/cache/nginx
      volumes:
        - name: config
          configMap:
            name: iam-console
        - name: cache
          emptyDir: { }
---
# Source: iam/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iam
  namespace: iam-system
  labels:
    helm.sh/chart: iam-0.1.0
    app.kubernetes.io/name: iam
    app.kubernetes.io/instance: iam
    app.kubernetes.io/version: "0.9.0"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: "iam.micromoving.cn"
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: iam-apiserver
                port:
                  name: http
          - path: /api/v1/authz
            pathType: Prefix
            backend:
              service:
                name: iam-authzserver
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iam-console
                port:
                  name: http
